Version 1.0

- Migrate to Harmony 2.0